--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.adaptiveperformance": "5.0.2",
+    "com.unity.adaptiveperformance.samsung.android": "5.0.0",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
